--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
               <div class="block-sub">
                  <div class="block__left-sub"> 
                   <div class="block__btn-sub">
-             <a class="source-sub"  href="https://www.youtube.com/watch?v=yT6CjT6PvRM&t=3s" target="_blank">Source</a> <!-- ССЫЛКА -->
+             <a class="source-sub"  href="https://www.youtube.com/watch?v=zZBiln_2FhM&t=1429s" target="_blank">Source</a> <!-- ССЫЛКА -->
                   </div>
                 </div>
                 <div class="block__center-sub">
-                  <div class="block__title-sub"> Название раздела </div>
+                  <div class="block__title-sub"> GitHub (33:20)</div>
                 </div>
                 <div class="block__right-sub">
                   <div class="title">ri 
@@ -289,11 +289,11 @@
             <div class="code-return-note">
             
             <div class="title-line">
-              <div class="code-title">Code ***
+              <div class="code-title">Code 3
               </div> 
-              <div class="return-title">Return ***
+              <div class="return-title">Return 3
               </div>
-              <div class="note-title">Note ***
+              <div class="note-title">Note 3
               </div>
             </div>
             
