--- a/index.html
+++ b/index.html
@@ -542,12 +542,12 @@
     </div>
   </div>
   <div class="content-line">
-    <div class="code-content">content <br>
+    <div class="code-content">git reset . <br>
   
     </div>
     <div class="return-content">return-content
     </div>
-    <div class="note-content">Note 11
+    <div class="note-content">отменить изменения в неск. файлах
     </div>
   </div>
   <div class="content-line">
